--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@tailwindcss/typography": "^0.5.19",
+    "@vercel/analytics": "^1.6.1",
     "isomorphic-dompurify": "^2.30.0",
     "next": "16.1.0",
     "react": "19.2.3",
